--- a/index.html
+++ b/index.html
@@ -262,30 +262,70 @@ footer a:hover {
         <p><strong>Contribution:</strong> Produced and directed AdPlus One 4K final version.</p>
       </div>
     </div>
+<div class="portfolio-item">
+  <iframe width="910" height="512" 
+    src="https://www.youtube.com/embed/CJa87TvuwOU" 
+    title="Workout" frameborder="0" 
+    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" 
+    referrerpolicy="strict-origin-when-cross-origin" allowfullscreen>
+  </iframe>
+  <div class="portfolio-info">
+    <p><strong>Role:</strong> Creative Director</p>
+    <p><strong>Contribution:</strong> Workout video production.</p>
+  </div>
+</div>
 
-    <div class="portfolio-item">
-      <iframe src="https://www.youtube.com/embed/hv1w0H8oSk8" allowfullscreen></iframe>
-      <div class="portfolio-info">
-        <p><strong>Role:</strong> Creative Director</p>
-        <p><strong>Contribution:</strong> Lark PJ Wood video production and editing.</p>
-      </div>
-    </div>
+<div class="portfolio-item">
+  <iframe width="941" height="539" 
+    src="https://www.youtube.com/embed/T2SS0yk17Eo" 
+    title="Tea Garden Johor Bahru" frameborder="0" 
+    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" 
+    referrerpolicy="strict-origin-when-cross-origin" allowfullscreen>
+  </iframe>
+  <div class="portfolio-info">
+    <p><strong>Role:</strong> Creative Director</p>
+    <p><strong>Contribution:</strong> Tea Garden Johor Bahru production.</p>
+  </div>
+</div>
 
-    <div class="portfolio-item">
-      <iframe src="https://www.youtube.com/embed/QRwbY8UWR2g" allowfullscreen></iframe>
-      <div class="portfolio-info">
-        <p><strong>Role:</strong> Creative Director</p>
-        <p><strong>Contribution:</strong> Loop video production for website background.</p>
-      </div>
-    </div>
+<div class="portfolio-item">
+  <iframe width="941" height="539" 
+    src="https://www.youtube.com/embed/6TfEQvhTNxA" 
+    title="OpenFi Recap" frameborder="0" 
+    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" 
+    referrerpolicy="strict-origin-when-cross-origin" allowfullscreen>
+  </iframe>
+  <div class="portfolio-info">
+    <p><strong>Role:</strong> Creative Director</p>
+    <p><strong>Contribution:</strong> OpenFi Recap production.</p>
+  </div>
+</div>
 
-    <div class="portfolio-item">
-      <iframe src="https://www.youtube.com/embed/hv1w0H8oSk8" allowfullscreen></iframe>
-      <div class="portfolio-info">
-        <p><strong>Role:</strong> Creative Director</p>
-        <p><strong>Contribution:</strong> Additional project video example.</p>
-      </div>
-    </div>
+<div class="portfolio-item">
+  <iframe width="941" height="539" 
+    src="https://www.youtube.com/embed/otICbBq4k7U" 
+    title="SpacePlus Valentino Khan" frameborder="0" 
+    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" 
+    referrerpolicy="strict-origin-when-cross-origin" allowfullscreen>
+  </iframe>
+  <div class="portfolio-info">
+    <p><strong>Role:</strong> Creative Director</p>
+    <p><strong>Contribution:</strong> SpacePlus Valentino Khan production.</p>
+  </div>
+</div>
+
+<div class="portfolio-item">
+  <iframe width="941" height="539" 
+    src="https://www.youtube.com/embed/bKJ2N9sPAuQ" 
+    title="EDC Thailand 2025 ProstageFX" frameborder="0" 
+    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" 
+    referrerpolicy="strict-origin-when-cross-origin" allowfullscreen>
+  </iframe>
+  <div class="portfolio-info">
+    <p><strong>Role:</strong> Creative Director</p>
+    <p><strong>Contribution:</strong> EDC Thailand 2025 ProstageFX production.</p>
+  </div>
+</div>
 
   </div>
 </section>
