--- a/index.html
+++ b/index.html
@@ -175,72 +175,25 @@ footer a:hover {
     </div>
   </div>
 </nav>
-
+  
 <section id="hero">
-  <!-- Desktop YouTube background -->
-  <iframe class="hero-video-desktop"
-      src="https://www.youtube.com/embed/QRwbY8UWR2g?autoplay=1&mute=1&controls=0&loop=1&playlist=QRwbY8UWR2g&playsinline=1"
-      frameborder="0"
-      allow="autoplay; encrypted-media"
-      allowfullscreen>
-  </iframe>
-
-  <!-- Mobile MP4 background -->
-  <video autoplay muted loop playsinline class="hero-video-mobile">
+  <video autoplay muted loop playsinline id="hero-video">
     <source src="videos/background.mp4" type="video/mp4">
+    Your browser does not support the video tag.
   </video>
 
-  <!-- Overlay content -->
   <div class="hero-overlay text-center">
     <h1>San Win</h1>
     <p>Creative Director | Storyteller | MBA Candidate in Bangkok</p>
   </div>
 </section>
 
-<style>
-  #hero {
-    position: relative;
-    width: 100%;
-    height: 100vh;
-    overflow: hidden;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-  }
-
-  .hero-video-desktop,
-  .hero-video-mobile {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    width: 100%;
-    height: 100%;
-    transform: translate(-50%, -50%);
-    object-fit: cover;
-    z-index: 0;
-    pointer-events: none;
-  }
-
-  .hero-video-mobile { display: none; }
-
-  .hero-overlay {
-    position: relative;
-    z-index: 2;
-    color: white;
-    width: 100%;
-    padding: 20px;
-    background: rgba(0,0,0,0.5);
-  }
-
-  /* Mobile fallback */
-  @media (max-width: 768px) {
-    .hero-video-desktop { display: none; }
-    .hero-video-mobile { display: block; }
-    #hero h1 { font-size: 2.5rem; }
-    #hero p { font-size: 1.2rem; }
-  }
-</style>
-
+  <div class="hero-overlay text-center">
+    <h1 data-aos="fade-up">San Win</h1>
+    <p data-aos="fade-up" data-aos-delay="200">Creative Director | Storyteller | MBA Candidate in Bangkok</p>
+  </div>
+</section>
+  
 <!-- About Section -->
 <section id="about" class="container">
   <div class="row align-items-center">
