--- a/index.html
+++ b/index.html
@@ -66,7 +66,25 @@ nav.navbar.scrolled {
   #hero h1 { font-size: 2.5rem; }
   #hero p { font-size: 1.2rem; }
 }
+  
+<section id="hero">
+  <video autoplay muted loop playsinline id="hero-video">
+    <source src="videos/background.mp4" type="video/mp4">
+    Your browser does not support the video tag.
+  </video>
 
+  <div class="hero-overlay text-center">
+    <h1>San Win</h1>
+    <p>Creative Director | Storyteller | MBA Candidate in Bangkok</p>
+  </div>
+</section>
+
+  <div class="hero-overlay text-center">
+    <h1 data-aos="fade-up">San Win</h1>
+    <p data-aos="fade-up" data-aos-delay="200">Creative Director | Storyteller | MBA Candidate in Bangkok</p>
+  </div>
+</section>
+  
 /* About Section */
 #about {
   padding: 80px 20px;
