--- a/index.html
+++ b/index.html
@@ -327,12 +327,13 @@ footer a:hover {
 <section id="contact" class="container text-center">
   <h2 data-aos="fade-up">Contact Me</h2>
   <p data-aos="fade-up" data-aos-delay="50">Let’s connect and create something together:</p>
-  <div class="social-icons mt-3" data-aos="fade-up" data-aos-delay="100">
-    <a href="https://www.facebook.com/sanvx/" target="_blank"><i class="fab fa-facebook-f"></i></a>
-    <a href="https://www.instagram.com/santhename/" target="_blank"><i class="fab fa-instagram"></i></a>
-    <a href="https://www.linkedin.com/in/san-win-4278a21b7/" target="_blank"><i class="fab fa-linkedin-in"></i></a>
-    <a href="mailto:sanwin@medianinjagroup.com"><i class="fas fa-envelope"></i></a>
-  </div>
+<div class="social-icons mt-3" data-aos="fade-up" data-aos-delay="100">
+  <a href="https://www.facebook.com/sanvx/" target="_blank"><i class="fab fa-facebook-f"></i></a>
+  <a href="https://www.instagram.com/santhename/" target="_blank"><i class="fab fa-instagram"></i></a>
+  <a href="https://www.linkedin.com/in/san-win-4278a21b7/" target="_blank"><i class="fab fa-linkedin-in"></i></a>
+  <a href="mailto:sanwin@medianinjagroup.com"><i class="fas fa-envelope"></i></a>
+  <a href="https://wa.me/66657592379" target="_blank"><i class="fab fa-whatsapp"></i></a>
+</div>
 </section>
 
 <!-- Footer -->
