--- a/index.html
+++ b/index.html
@@ -219,40 +219,35 @@ footer a:hover {
     <div class="portfolio-item">
       <iframe src="https://www.youtube.com/embed/m_1JlXPj_og" allowfullscreen></iframe>
       <div class="portfolio-info">
-        <p><strong>Role:</strong> Creative Director & Editor</p>
-        <p><strong>Contribution:</strong> Directed, scripted, and oversaw post-production.</p>
+        <p><strong>Contribution:</strong> Filming, editing, and delivery. </p>
       </div>
     </div>
 
     <div class="portfolio-item">
       <iframe src="https://www.youtube.com/embed/2wAE9mTJM-c" allowfullscreen></iframe>
       <div class="portfolio-info">
-        <p><strong>Role:</strong> Creative Director</p>
-        <p><strong>Contribution:</strong> Directed and produced STEM project content.</p>
+        <p><strong>Contribution:</strong> Full video production (concept, filming, editing, and delivery). </p>
       </div>
     </div>
 
     <div class="portfolio-item">
       <iframe src="https://www.youtube.com/embed/65_QsedmokU" allowfullscreen></iframe>
       <div class="portfolio-info">
-        <p><strong>Role:</strong> Creative Director</p>
-        <p><strong>Contribution:</strong> Oversaw highlight reel production for V8 IPTC 2025.</p>
+        <p><strong>Contribution:</strong> Filming, editing, and delivery. </p>
       </div>
     </div>
 
     <div class="portfolio-item">
       <iframe src="https://www.youtube.com/embed/hAqQdbmcXFQ" allowfullscreen></iframe>
       <div class="portfolio-info">
-        <p><strong>Role:</strong> Creative Director</p>
-        <p><strong>Contribution:</strong> Full production and post-production supervision.</p>
+        <p><strong>Contribution:</strong> Full video production (concept, filming, editing, and delivery). </p>
       </div>
     </div>
 
     <div class="portfolio-item">
       <iframe src="https://www.youtube.com/embed/q9GmRZke-ug" allowfullscreen></iframe>
       <div class="portfolio-info">
-        <p><strong>Role:</strong> Creative Director</p>
-        <p><strong>Contribution:</strong> Produced and directed AdPlus One 4K final version.</p>
+        <p><strong>Contribution:</strong> Full video production (concept, filming, editing, and delivery). </p>
       </div>
     </div>
 <div class="portfolio-item">
@@ -263,8 +258,7 @@ footer a:hover {
     referrerpolicy="strict-origin-when-cross-origin" allowfullscreen>
   </iframe>
   <div class="portfolio-info">
-    <p><strong>Role:</strong> Creative Director</p>
-    <p><strong>Contribution:</strong> Workout video production.</p>
+    <p><strong>Contribution:</strong> Full video production (concept, filming, editing, and delivery). </p>
   </div>
 </div>
 
@@ -276,8 +270,7 @@ footer a:hover {
     referrerpolicy="strict-origin-when-cross-origin" allowfullscreen>
   </iframe>
   <div class="portfolio-info">
-    <p><strong>Role:</strong> Creative Director</p>
-    <p><strong>Contribution:</strong> Tea Garden Johor Bahru production.</p>
+    <p><strong>Contribution:</strong> Full video production (concept, filming, editing, and delivery). </p>
   </div>
 </div>
 
@@ -289,8 +282,7 @@ footer a:hover {
     referrerpolicy="strict-origin-when-cross-origin" allowfullscreen>
   </iframe>
   <div class="portfolio-info">
-    <p><strong>Role:</strong> Creative Director</p>
-    <p><strong>Contribution:</strong> OpenFi Recap production.</p>
+    <p><strong>Contribution:</strong> Full video production (concept, filming, editing, and delivery). </p>
   </div>
 </div>
 
@@ -302,8 +294,7 @@ footer a:hover {
     referrerpolicy="strict-origin-when-cross-origin" allowfullscreen>
   </iframe>
   <div class="portfolio-info">
-    <p><strong>Role:</strong> Creative Director</p>
-    <p><strong>Contribution:</strong> SpacePlus Valentino Khan production.</p>
+    <p><strong>Contribution:</strong> Full video production (concept, filming, editing, and delivery). </p>
   </div>
 </div>
 
@@ -315,8 +306,7 @@ footer a:hover {
     referrerpolicy="strict-origin-when-cross-origin" allowfullscreen>
   </iframe>
   <div class="portfolio-info">
-    <p><strong>Role:</strong> Creative Director</p>
-    <p><strong>Contribution:</strong> EDC Thailand 2025 ProstageFX production.</p>
+    <p><strong>Contribution:</strong> Full video production (concept, filming, editing, and delivery). </p>
   </div>
 </div>
 
