--- a/index.html
+++ b/index.html
@@ -76,6 +76,23 @@ nav.navbar.scrolled {
   box-shadow: 0 10px 20px rgba(0,0,0,0.1);
 }
 
+  /* Stats Section */
+#stats {
+  padding: 80px 20px;
+  background: linear-gradient(to right, #000, #111);
+  color: white;
+  text-align: center;
+}
+#stats h2 {
+  font-size: 2.5rem;
+  margin-bottom: 20px;
+}
+#stats .counter {
+  font-size: 4rem;
+  font-weight: bold;
+  color: #00ffcc;
+}
+  
 /* Portfolio Section */
 #portfolio {
   padding: 60px 20px;
@@ -210,6 +227,16 @@ footer a:hover {
     </div>
   </div>
 </section>
+
+  <!-- Stats Section -->
+<section id="stats">
+  <div class="container">
+    <h2 data-aos="fade-up">Achievements</h2>
+    <p data-aos="fade-up" data-aos-delay="100">Directed & Produced</p>
+    <span id="videoCount" class="counter" data-aos="fade-up" data-aos-delay="200">0</span><span class="counter">+</span>
+    <p class="mt-2">Videos</p>
+  </div>
+</section>
   
 <!-- Portfolio Section -->
 <section id="portfolio">
@@ -342,6 +369,34 @@ window.addEventListener('scroll', () => {
   if(window.scrollY > 50) navbar.classList.add('scrolled');
   else navbar.classList.remove('scrolled');
 });
+  // Counter Animation
+function animateCounter(id, target, duration) {
+  const element = document.getElementById(id);
+  let start = 0;
+  const increment = target / (duration / 16);
+  const counter = setInterval(() => {
+    start += increment;
+    if (start >= target) {
+      element.textContent = target.toLocaleString();
+      clearInterval(counter);
+    } else {
+      element.textContent = Math.floor(start).toLocaleString();
+    }
+  }, 16);
+}
+
+function handleScroll() {
+  const counterSection = document.querySelector('#stats');
+  const rect = counterSection.getBoundingClientRect();
+  const windowHeight = window.innerHeight || document.documentElement.clientHeight;
+
+  if (rect.top < windowHeight && rect.bottom >= 0) {
+    animateCounter("videoCount", 1000, 2000);
+    window.removeEventListener("scroll", handleScroll);
+  }
+}
+
+window.addEventListener("scroll", handleScroll);
 </script>
 
 </body>
