--- a/index.html
+++ b/index.html
@@ -231,10 +231,10 @@ footer a:hover {
   <!-- Stats Section -->
 <section id="stats">
   <div class="container">
-    <h2 data-aos="fade-up">Achievements</h2>
-    <p data-aos="fade-up" data-aos-delay="100">Directed & Produced</p>
+    <h2 data-aos="fade-up">Directed & Produced</h2>
+    <p data-aos="fade-up" data-aos-delay="100">over</p>
     <span id="videoCount" class="counter" data-aos="fade-up" data-aos-delay="200">0</span><span class="counter">+</span>
-    <p class="mt-2">Videos</p>
+    <p class="mt-2">projects, including films, web series, TVCs, and promotional videos.</p>
   </div>
 </section>
   
